--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:title" content="🔥 عروض خاصة لفترة محدودة! 🔥">
 <meta property="og:description" content="استفد الآن من الخصومات قبل انتهاء المهلة – سارع بالحجز أو الشراء!">
 <meta property="og:image" content="https://alkhaleejonline.net/sites/default/files/inline-images/0082994-269-rinnoo-475eacd04eba43aaa366efddec7321dc.jpg">
-<meta property="og:url" content="https://yourdomain.com/page.html">
+<meta property="og:url" content="https://oferskuwait.github.io/kuw/">
 <meta property="og:site_name" content="متجرك الرائع">
 
 
