--- a/carttest.html
+++ b/carttest.html
@@ -225,7 +225,7 @@
       <div class="option-row">
         <input type="radio" name="category" value="home_appliances" id="opt3">
         <label for="opt3"><strong> توصيل سريع خلال ساعة</strong></label>
-        <span class="option-desc">زيادة 5 ريال   </span>
+        <span class="option-desc">زيادة 1 دينار   </span>
       </div>
   
     </div>
